--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,7 @@
       display: block;
       margin-bottom: 0.5rem;
       font-weight: 500;
+      
     }
 
     input[type="email"] {
@@ -45,6 +46,7 @@
       border: 1px solid #ccc;
       border-radius: 12px;
       font-size: 1rem;
+      box-sizing: border-box;
     }
 
     button {
