--- a/others/templates/index.html
+++ b/others/templates/index.html
@@ -305,10 +305,7 @@
     <div class="category">
         <h3>Features</h3>
         <div class="buttons">
-          <a href="predict.html">Download Excel</a>
-            {% comment %} <a href="{% url 'download_excel' %}">Download Excel</a>
-            <a href="{% url 'excel_sheets_list' %}" target="_self">View Excel Sheets</a>
-            <a href="{% url 'update_roll_number' %}">Update Roll numbers</a> {% endcomment %}
+          <a href="predict.html">Heart risk prediction 💖</a>
         </div>
     </div>
 </div>
