--- a/others/templates/predict.html
+++ b/others/templates/predict.html
@@ -127,7 +127,8 @@
         display: flex;
         flex-direction: column;  /* Stack items vertically */
         gap: 10px;  /* Adds space between the buttons */
-        width: 350px;  /* Makes sure the buttons take up the full width */
+        width: 100%;  /* Makes sure the buttons take up the full width */
+        max-width: 100%;
     }
     
     .buttons a {
@@ -241,7 +242,7 @@
     <div class="category">
         <h3>Features</h3>
         <div class="buttons">
-          <a href="predict.html">Heart risk prediction 💖</a>
+          
         </div>
     </div>
 </div>
